<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_260sdp"
    android:layout_gravity="center"
  >


    <ImageButton
        android:id="@+id/cancel_rejection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@color/transparent"
        android:src="@drawable/ic_cancle_icon_white_bg" />




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/cancel_rejection_button"
>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/gift_card_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transparent"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        >


    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_gift_card_icon" />


    <LinearLayout
        android:id="@+id/rejected_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone"
        >


        <TextView
            android:id="@+id/rejected_heading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/volte_semibold"
            android:gravity="center"
            tools:text="Are you sure, you want to reject the Gift cart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/popup_no_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/custum_rouded_corner_with_primarycolor"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_27sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/gift_cart_no_btn_colour"
                android:textSize="@dimen/_13sdp"
                />

            <Button
                android:id="@+id/popup_yes_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="0.5"
                android:background="@drawable/custum_rouded_corner_with_primarycolor"
                android:backgroundTint="@color/yellow"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_27sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp"

                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/accepted_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/volte_semibold"
            android:gravity="center"
            android:text="@string/congratulations"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/accepted_heading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/volte_semibold"
            tools:text="Your gifcard is added to your  sample express wallet"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/_16sdp" />


    </LinearLayout>

    </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>